--- a/index.css
+++ b/index.css
@@ -16,6 +16,11 @@
     src: url('./fonts/Jost-Regular.ttf') format('woff');
 }
 
+@font-face {
+    font-family: 'MochiyPopOne';
+    src: url('./fonts/MochiyPopOne-Regular.ttf');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -122,7 +127,7 @@ img {
 h1,
 h2,
 h3 {
-    font-family: 'Jost', sans-serif;
+    font-family: 'MochiyPopOne', sans-serif;
     font-weight: 400;
     line-height: var(--line-height-small);
     color: var(--white);
